# traccc

./: .gitignore  CMakeLists.txt  automated_benchmark  nvc++_p
benchmarks/: CMakeLists.txt
benchmarks/common/: CMakeLists.txt
benchmarks/common/benchmarks/: cca_benchmark.cpp
benchmarks/cpu/: CMakeLists.txt  seq_cca.cpp
benchmarks/cuda/: CMakeLists.txt  bench.cu  cuda_bench.cu  cuda_cca.cpp  matrix_sums.cu
benchmarks/stdpar/: CMakeLists.txt  stdpar_cca.cpp
cmake/: traccc-compiler-options-cuda.cmake
core/include/algorithms/: component_connection.hpp  spacepoint_formation.hpp
core/include/algorithms/tools/: helix_projector.hpp  linear_projector.hpp  quadratic_equation.hpp
core/include/edm/: cell.hpp  cluster.hpp  measurement.hpp  spacepoint.hpp
core/include/traccc/clusterization/: spacepoint_formation.hpp
core/include/traccc/edm/: cluster.hpp  particle.hpp
core/include/traccc/seeding/detail/: spacepoint_grid.hpp
device/cuda/: CMakeLists.txt
device/cuda/include/traccc/cuda/cca/: component_connection.hpp
device/cuda/src/cca/: component_connection.cu
device/stdpar/: CMakeLists.txt
device/stdpar/include/traccc/stdpar/clusterization/: clusterization_algorithm.hpp  component_connection.hpp  component_connection_fastsv.hpp  component_connection_sparseccl.hpp  component_connection_ssv.hpp  measurement_creation.hpp  measurement_creation_helper.hpp  spacepoint_formation.hpp  test.hpp
device/stdpar/include/traccc/stdpar/clusterization/detail/: cluster_element.hpp  sparse_ccl.hpp
device/stdpar/include/traccc/stdpar/utils/: CountingIterator.hpp
device/stdpar/src/clusterization/: component_connection_fastsv.cpp  component_connection_ssv.cpp  test.cpp
examples/: CMakeLists.txt
examples/options/include/traccc/options/: full_tracking_input_options.hpp  handle_argument_errors.hpp  seeding_input_options.hpp
examples/performance/include/traccc/efficiency/: duplication_plot_tool.hpp  eff_plot_tool.hpp
examples/performance/include/traccc/event/: event_map.hpp
examples/run/: CMakeLists.txt
examples/run/cpu/: seq_example.cpp
examples/run/cuda/: CMakeLists.txt  cca_example_cuda.cpp
examples/run/stdpar/: CMakeLists.txt  stdpar_fastsv.cpp  stdpar_par_example.cpp
io/include/traccc/io/: demonstrator_edm.hpp  reader.hpp  utils.hpp
tests/: CMakeLists.txt
tests/algorithms/: CMakeLists.txt  linear_projector_tests.cpp
tests/edm/: CMakeLists.txt  edm_tests.cpp
tests/stdpar/: CMakeLists.txt  test_cca.cpp  test_cca_fastsv.cpp  test_cca_sparseccl.cpp
